--- a/Functions/Randomized_Grid_Search/RGS_M.ipynb
+++ b/Functions/Randomized_Grid_Search/RGS_M.ipynb
@@ -73,6 +73,81 @@
   },
   {
    "cell_type": "markdown",
+   "id": "edb6d585",
+   "metadata": {},
+   "source": [
+    "* LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75f53524",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#------------------------------------------- Randomized Grid SearchCV --------------------------------------------------------#\n",
+    "def Characteristics_of_LinearRegression():\n",
+    "    '''\n",
+    "    This function visualize a importance model columns and average of this.\n",
+    "    ------------------------------\n",
+    "    Parameter(model): ML - Model\n",
+    "    ------------------------------\n",
+    "    '''\n",
+    "    lr = LinearRegression()\n",
+    "    #--------------------------------------------------#\n",
+    "    poss_coef = lr.coef_[model.coef_ > 0]    \n",
+    "    neg_coef = lr.coef_[model.coef_ < 0]   \n",
+    "    \n",
+    "    poss_avg = np.average(poss_coef)\n",
+    "    neg_avg = np.average(neg_coef)\n",
+    "    #--------------------------------------------------#\n",
+    "    \n",
+    "    plt.style.use(\"cyberpunk\") #Background color\n",
+    "    pal_red = sns.color_palette(\"flare\") #Color\n",
+    "    pal_blue = sns.color_palette(\"Blues\") #Color\n",
+    "    \n",
+    "    fig, ax = plt.subplots(figsize=(18,8), tight_layout=True) #Size of plot dpi=300 for better quality\n",
+    "    \n",
+    "    for _ in range(len(lr.coef_)):\n",
+    "        if (lr.coef_[_] >= poss_avg) or (lr.coef_[_] <= neg_avg):\n",
+    "            if model.lr[_] > 0:\n",
+    "                bar1 = ax.bar(lr.feature_names_in_[_], lr.coef_[_], width=0.7, linewidth=3, alpha=0.8, bottom=0, edgecolor=pal_blue[3], color=pal_blue[4])\n",
+    "            elif lr.coef_[_] < 0:\n",
+    "                bar1 = ax.bar(lr.feature_names_in_[_], lr.coef_[_], width=0.7, linewidth=3, alpha=0.8, bottom=0, edgecolor=pal_red[2], color=pal_red[3])\n",
+    "            else:\n",
+    "                bar1 = ax.bar(lr.feature_names_in_[_], lr.coef_[_], width=0.7, linewidth=3, alpha=0.8, bottom=0, color='White')\n",
+    "        else:\n",
+    "            bar1 = ax.bar(model.feature_names_in_[_], model.coef_[_], width=0.7, linewidth=3, alpha=0.8, bottom=0, edgecolor='Silver', color='Snow')\n",
+    "\n",
+    "    ax.hlines(y = poss_avg, xmin = len(lr.coef_) * 0.12, xmax = model.feature_names_in_[-4], linestyles = 'dashed', color = 'White')\n",
+    "    ax.text(lr.feature_names_in_[0], poss_avg, 'Avg Importance Columns', ha ='left', va ='center') \n",
+    "    ax.text(lr.feature_names_in_[-1], poss_avg, round(poss_avg,2), ha ='right', va ='center') \n",
+    "\n",
+    "    ax.hlines(y = neg_avg, xmin = lr.feature_names_in_[3], xmax = len(model.coef_) * 0.88, linestyles = 'dashed', color = 'White')\n",
+    "    ax.text(lr.feature_names_in_[-1], neg_avg, 'Avg Importance Columns', ha ='right', va ='center') \n",
+    "    ax.text(lr.feature_names_in_[0], neg_avg, round(neg_avg,2), ha ='left', va ='center') \n",
+    "\n",
+    "    plt.legend([lr], loc=\"upper right\", fontsize=15, labelcolor='Gold')\n",
+    "    plt.xlabel('Columns Name', fontsize=20, color='Gold') #Left title\n",
+    "    plt.ylabel('Importance Model Values', fontsize=20, color='Gold') #Bottom title\n",
+    "    plt.tick_params(axis='y', labelrotation=30, labelsize=12, colors='White')\n",
+    "    plt.tick_params(axis='x', width=3, length=7, labelrotation=30, labelsize=7, bottom=True, direction=\"in\", left=False, colors='White') #White\n",
+    "    \n",
+    "    ax.spines['top'].set_visible(True)\n",
+    "    ax.spines['top'].set_linewidth(0.7)\n",
+    "    ax.spines['top'].set_color('Gold')\n",
+    "    ax.spines['right'].set_visible(True)\n",
+    "    ax.spines['right'].set_linewidth(0.7)\n",
+    "    ax.spines['right'].set_color('Gold')\n",
+    "    ax.spines['left'].set_visible(False)\n",
+    "    ax.spines['bottom'].set_visible(False)     \n",
+    "    plt.show()\n",
+    "#------------------------------------------- Randomized Grid SearchCV --------------------------------------------------------#\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8125cdb4",
    "metadata": {},
    "source": [
@@ -88,6 +163,13 @@
    "source": [
     "#------------------------------------------- Randomized Grid SearchCV --------------------------------------------------------#\n",
     "def DecisionTreeRegressorModel(dataframe):\n",
+    "    '''\n",
+    "    This function print RMSE (Train - Test) of Random Grid Search.\n",
+    "    Visualize Forecast of last month and RMSE of Drid Search\n",
+    "    ------------------------------\n",
+    "    Parameter(dataframe): Dataframe\n",
+    "    ------------------------------\n",
+    "    '''\n",
     "    #hyperparamet_names = []\n",
     "    #hyperparamet_values = []\n",
     "\n",
@@ -114,7 +196,7 @@
     "        fig, ax1 = plt.subplots(figsize=(15,5), tight_layout=True) #Size of plot dpi=300 for better quality\n",
     "\n",
     "        ax1.plot(forecast_index, y_test, ls='--', color=pal_red[3])\n",
-    "        ax1.plot(forecast_index, predict_test, color=pal_blue[4])\n",
+    "        ax1.plot(forecast_index, forecast_grid_search, color=pal_blue[4])\n",
     "\n",
     "        plt.title('Forecast of DecisionTreeRegressor (Grid - Search)', fontsize=20, color='Gold') #Bottom title\n",
     "        plt.legend(['Actual','Forecast'], loc=\"upper right\", fontsize=15) #Label - Size of plot\n",
@@ -138,7 +220,7 @@
     "                                         'Test' : [Test_RMSE]})\n",
     "        \n",
     "        fig = gridspec.GridSpec(3, 2)\n",
-    "        pl.figure(figsize=(15, 15), tight_layout=True)\n",
+    "        pl.figure(figsize=(15, 12), tight_layout=True)\n",
     "\n",
     "        ax2 = pl.subplot(fig[0, 0])\n",
     "        plt.ylabel('Root Mean Square Error\\nGrid-Search', fontsize=20, color='Gold') #Bottom title\n",
@@ -186,10 +268,49 @@
     "        plt.show()\n",
     "        #------------ Plot 2,3 ------------#\n",
     "\n",
+    "        pl.figure(figsize=(15, 10), tight_layout=True)\n",
+    "        ax4 = pl.subplot(fig[1, 0:])\n",
+    "        \n",
+    "        #Residual for test\n",
+    "        residuals_train = y_train - forecast_train_grid_search\n",
+    "        residuals_index_train = y_train.index.copy()\n",
+    "        residuals_index_train = pd.to_datetime(residuals_index_train)\n",
+    "        \n",
+    "        #Residual for test\n",
+    "        residuals_test = y_test - forecast_grid_search\n",
+    "        residuals_index_test = y_test.index.copy()\n",
+    "        residuals_index_test = pd.to_datetime(residuals_index_test)\n",
+    "\n",
+    "        ax4.plot(residuals_index_train, residuals_train, color=pal_blue[4])\n",
+    "        ax4.plot(residuals_index_test, residuals_test, color=pal_red[3])\n",
+    "        \n",
+    "        ax4.legend(['Residuals - Train','Residuals - Test'], loc=\"upper right\", fontsize=15) #Label - Size of plot\n",
+    "        plt.tick_params(axis='x', labelrotation=30, labelsize=15, width=10, length=3,  direction=\"in\", colors='White') #Rotation label x and y\n",
+    "        plt.tick_params(axis='y', labelrotation=30, labelsize=15, colors='White') #Rotation label x and y\n",
+    "        plt.grid(zorder=1, alpha=0.2, linestyle='--', linewidth=0.5, color='darkgrey') #Grid of plot\n",
+    "\n",
+    "        mplcp.make_lines_glow()\n",
+    "\n",
+    "        ax4.spines['top'].set_visible(False)\n",
+    "        ax4.spines['right'].set_visible(False)\n",
+    "        ax4.spines['left'].set_color('White')\n",
+    "        ax4.spines['left'].set_linewidth(0.3)\n",
+    "        ax4.spines['bottom'].set_color('White')\n",
+    "        ax4.spines['bottom'].set_linewidth(0.3)\n",
+    "        plt.show()\n",
+    "\n",
+    "        \n",
+    "        \n",
     "    def Train_Test_Split(dataframe):\n",
     "        X = dataframe.iloc[:, 1:]\n",
     "        y = dataframe.iloc[:, 0]\n",
-    "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.05, shuffle=False) #80% X_train - 20% X_test\n",
+    "        \n",
+    "        X_train = X[0:len(X)-30]\n",
+    "        y_train = y[0:len(y)-30]\n",
+    "        X_test = X[-30:]\n",
+    "        y_test = y[-30:]\n",
+    "\n",
+    "        #X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.05, shuffle=False) #80% X_train - 20% X_test\n",
     "    \n",
     "        print('-------------------------')\n",
     "        print('Full Length is: ', len(X))\n",
@@ -201,9 +322,9 @@
     "    X_train, X_test, y_train, y_test = Train_Test_Split(dataframe=dataframe)\n",
     "\n",
     "    def RMSE(model, Xtrain, Xtest, ytrain, ytest):\n",
-    "        global predict_test, predict_test, Train_RMSE, Test_RMSE\n",
-    "        model.fit(Xtrain,ytrain)\n",
+    "        global predict_train, predict_test, Train_RMSE, Test_RMSE\n",
     "        \n",
+    "        model.fit(Xtrain,ytrain)\n",
     "        #------------#\n",
     "        predict_train = model.predict(Xtrain)\n",
     "        predict_test = model.predict(Xtest)\n",
@@ -223,72 +344,131 @@
     "        print('Test-Set Root Mean Square Error: ', Test_RMSE)\n",
     "        print('------------------------------------------------------------------')\n",
     "\n",
+    "\n",
     "        \n",
-    "        \n",
-    "    #------------#\n",
-    "    # Define the parameter grid\n",
-    "    param_distributions = {\n",
-    "        \"max_depth\": [None, 5, 10, 20, 50],\n",
-    "        \"min_samples_split\": [2, 5, 10, 20],\n",
-    "        \"min_samples_leaf\": [1, 2, 5, 10],\n",
-    "        \"max_features\": [None, \"sqrt\", \"log2\"],\n",
-    "        \"max_leaf_nodes\": [None, 10, 20, 50],\n",
-    "        \"min_impurity_decrease\": [0.0, 0.01, 0.1],\n",
-    "        \"criterion\": [\"squared_error\", \"absolute_error\", \"friedman_mse\"]}\n",
+    "    def Random_Grid_Search():   \n",
+    "        #Define the parameter grid\n",
+    "        param_distributions = {\n",
+    "            \"max_depth\": [None, 5, 10, 20, 50],\n",
+    "            \"min_samples_split\": [2, 5, 10, 20],\n",
+    "            \"min_samples_leaf\": [1, 2, 5, 10],\n",
+    "            \"max_features\": [None, \"sqrt\", \"log2\"],\n",
+    "            \"max_leaf_nodes\": [None, 10, 20, 50],\n",
+    "            \"min_impurity_decrease\": [0.0, 0.01, 0.1],\n",
+    "            \"criterion\": [\"squared_error\", \"absolute_error\", \"friedman_mse\"]}\n",
     "\n",
-    "    # Set up RandomizedSearchCV\n",
-    "    random_search = RandomizedSearchCV(\n",
-    "        estimator=dtr,\n",
-    "        param_distributions=param_distributions,\n",
-    "        n_iter=100,  # Number of random samples\n",
-    "        cv=None,        # Number of cross-validation folds\n",
-    "        scoring=\"neg_mean_squared_error\",  # Metric to optimize\n",
-    "        random_state=0,\n",
-    "        n_jobs=-1)    # Use all available cores\n",
-    "    #------------#\n",
+    "        #Set up RandomizedSearchCV\n",
+    "        random_search = RandomizedSearchCV(\n",
+    "            estimator=dtr,\n",
+    "            param_distributions=param_distributions,\n",
+    "            n_iter=100,  # Number of random samples\n",
+    "            cv=None,        # Number of cross-validation folds\n",
+    "            scoring=\"neg_mean_squared_error\",  # Metric to optimize\n",
+    "            random_state=0,\n",
+    "            n_jobs=-1)    # Use all available cores\n",
     "\n",
-    "    \n",
-    "    \n",
-    "    print('!!!------------... Start Randomized Search CV ...------------!!!')\n",
-    "    for _ in range(0,3,1):\n",
-    "        random_search.fit(X_train,y_train)\n",
-    "        print('The Random Hyparameters Tuning is: ', random_search.best_estimator_)\n",
-    "        RMSE(model=random_search, Xtrain=X_train, Xtest=X_test, ytrain=y_train, ytest=y_test)\n",
-    "        if _ < 2:\n",
-    "            print('\\n')\n",
-    "    print('!!!------------... End Randomized Search CV ...------------!!!\\n\\n\\n')\n",
-    "\n",
-    "    # Define the parameter grid\n",
-    "    param_distributions = {\n",
-    "        \"max_depth\": [19,20,21],\n",
-    "        \"min_samples_leaf\": [1, 2, 3],\n",
-    "        \"min_impurity_decrease\": [0.01, 0.02, 0.03],\n",
-    "        \"max_leaf_nodes\" : [49, 50, 51]}\n",
+    "        print('!!!------------... Start Randomized Search CV ...------------!!!')\n",
+    "        for _ in range(0,3,1):\n",
+    "            random_search.fit(X_train,y_train)\n",
+    "            print('The Random Hyparameters Tuning is: ', random_search.best_estimator_)\n",
+    "            RMSE(model=random_search, Xtrain=X_train, Xtest=X_test, ytrain=y_train, ytest=y_test)\n",
+    "            if _ < 2:\n",
+    "                print('\\n')\n",
+    "        print('!!!------------... End Randomized Search CV ...------------!!!\\n\\n\\n')\n",
+    "    Random_Grid_Search()\n",
     "\n",
     "    \n",
     "    \n",
-    "#------------#\n",
-    "    # Set up GridSearchCV\n",
-    "    grid_search = GridSearchCV(\n",
-    "        estimator=dtr,\n",
-    "        param_grid=param_distributions,\n",
-    "        #verbose=10,\n",
-    "        cv=None,\n",
-    "        refit = True,\n",
-    "        n_jobs=-1)    # Use all available cores\n",
-    "#------------#\n",
+    "    def Grid_Search():   \n",
+    "        global forecast_train_grid_search, forecast_grid_search\n",
+    "        #Define the parameter grid\n",
+    "        param_distributions = {\n",
+    "            \"max_depth\": [19,20,21],\n",
+    "            \"min_samples_leaf\": [1, 2, 3],\n",
+    "            \"min_impurity_decrease\": [0.01, 0.02, 0.03],\n",
+    "            \"max_leaf_nodes\" : [49, 50, 51]}\n",
     "\n",
+    "        #Set up GridSearchCV\n",
+    "        grid_search = GridSearchCV(\n",
+    "            estimator=dtr,\n",
+    "            param_grid=param_distributions,\n",
+    "            #verbose=10,\n",
+    "            cv=None,\n",
+    "            refit=True,\n",
+    "            n_jobs=-1)    # Use all available cores\n",
     "    \n",
-    "    \n",
-    "    grid_search.fit(X_train , y_train)\n",
-    "    #forecast_grid_search = grid_search.predict(X_test)\n",
+    "        grid_search.fit(X_train , y_train)\n",
+    "        forecast_train_grid_search = grid_search.predict(X_train)\n",
+    "        forecast_grid_search = grid_search.predict(X_test)\n",
     "\n",
-    "    print('!!!------------... Start Grid Search CV ...------------!!!')\n",
-    "    print('The Grid Hyparameters Tuning is: ', grid_search.best_estimator_)\n",
-    "    RMSE(model=grid_search, Xtrain=X_train, Xtest=X_test, ytrain=y_train, ytest=y_test)\n",
-    "    print('!!!------------... End Grid Search CV ...------------!!!\\n\\n\\n')\n",
+    "        print('!!!------------... Start Grid Search CV ...------------!!!')\n",
+    "        print('The Grid Hyparameters Tuning is: ', grid_search.best_estimator_)\n",
+    "        RMSE(model=grid_search, Xtrain=X_train, Xtest=X_test, ytrain=y_train, ytest=y_test)\n",
+    "        print('!!!------------... End Grid Search CV ...------------!!!\\n\\n\\n')\n",
     "    \n",
-    "    Plot_Of_Last_Months(model=grid_search)\n",
+    "        Plot_Of_Last_Months(model=grid_search)\n",
+    "    Grid_Search()\n",
+    "#------------------------------------------- Randomized Grid SearchCV --------------------------------------------------------#\n",
+    "\n",
+    "\n",
+    "\n",
+    "#------------------------------------------- Randomized Grid SearchCV --------------------------------------------------------#\n",
+    "def Characteristics_of_DecisionTreeRegressor(model):\n",
+    "    '''\n",
+    "    This function visualize a importance model columns and average of this.\n",
+    "    ------------------------------\n",
+    "    Parameter(model): ML - Model\n",
+    "    ------------------------------\n",
+    "    '''\n",
+    "\n",
+    "    #--------------------------------------------------#\n",
+    "    poss_coef = model.feature_importances_[model.feature_importances_ > 0]    \n",
+    "    neg_coef = model.feature_importances_[model.feature_importances_ < 0]   \n",
+    "    \n",
+    "    poss_avg = np.average(poss_coef)\n",
+    "    neg_avg = np.average(neg_coef)\n",
+    "    #--------------------------------------------------#\n",
+    "    \n",
+    "    plt.style.use(\"cyberpunk\") #Background color\n",
+    "    pal_red = sns.color_palette(\"flare\") #Color\n",
+    "    pal_blue = sns.color_palette(\"Blues\") #Color\n",
+    "    \n",
+    "    fig, ax = plt.subplots(figsize=(18,8), tight_layout=True) #Size of plot dpi=300 for better quality\n",
+    "    \n",
+    "    for _ in range(len(model.feature_importances_)):\n",
+    "        if (model.feature_importances_[_] >= poss_avg) or (model.feature_importances_[_] <= neg_avg):\n",
+    "            if model.feature_importances_[_] > 0:\n",
+    "                bar1 = ax.bar(model.feature_names_in_[_], model.feature_importances_[_], width=0.7, linewidth=3, alpha=0.8, bottom=0, edgecolor=pal_blue[3], color=pal_blue[4])\n",
+    "            elif model.feature_importances_[_] < 0:\n",
+    "                bar1 = ax.bar(model.feature_names_in_[_], model.feature_importances_[_], width=0.7, linewidth=3, alpha=0.8, bottom=0, edgecolor=pal_red[2], color=pal_red[3])\n",
+    "            else:\n",
+    "                bar1 = ax.bar(model.feature_names_in_[_], model.feature_importances_[_], width=0.7, linewidth=3, alpha=0.8, bottom=0, color='White')\n",
+    "        else:\n",
+    "            bar1 = ax.bar(model.feature_names_in_[_], model.feature_importances_[_], width=0.7, linewidth=3, alpha=0.8, bottom=0, edgecolor='Silver', color='Snow')\n",
+    "\n",
+    "    ax.hlines(y = poss_avg, xmin = len(model.feature_importances_) * 0.12, xmax = model.feature_names_in_[-4], linestyles = 'dashed', color = 'White')\n",
+    "    ax.text(model.feature_names_in_[0], poss_avg, 'Avg Importance Columns', ha ='left', va ='center') \n",
+    "    ax.text(model.feature_names_in_[-1], poss_avg, round(poss_avg,2), ha ='right', va ='center') \n",
+    "\n",
+    "    ax.hlines(y = neg_avg, xmin = model.feature_names_in_[3], xmax = len(model.feature_importances_) * 0.88, linestyles = 'dashed', color = 'White')\n",
+    "    ax.text(model.feature_names_in_[-1], neg_avg, 'Avg Importance Columns', ha ='right', va ='center') \n",
+    "    ax.text(model.feature_names_in_[0], neg_avg, round(neg_avg,2), ha ='left', va ='center') \n",
+    "\n",
+    "    plt.legend([model], loc=\"upper right\", fontsize=15, labelcolor='Gold')\n",
+    "    plt.xlabel('Columns Name', fontsize=20, color='Gold') #Left title\n",
+    "    plt.ylabel('Importance Model Values', fontsize=20, color='Gold') #Bottom title\n",
+    "    plt.tick_params(axis='y', labelrotation=30, labelsize=12, colors='White')\n",
+    "    plt.tick_params(axis='x', width=3, length=7, labelrotation=30, labelsize=7, bottom=True, direction=\"in\", left=False, colors='White') #White\n",
+    "    \n",
+    "    ax.spines['top'].set_visible(True)\n",
+    "    ax.spines['top'].set_linewidth(0.7)\n",
+    "    ax.spines['top'].set_color('Gold')\n",
+    "    ax.spines['right'].set_visible(True)\n",
+    "    ax.spines['right'].set_linewidth(0.7)\n",
+    "    ax.spines['right'].set_color('Gold')\n",
+    "    ax.spines['left'].set_visible(False)\n",
+    "    ax.spines['bottom'].set_visible(False)     \n",
+    "    plt.show()\n",
     "#------------------------------------------- Randomized Grid SearchCV --------------------------------------------------------#\n"
    ]
   },
