--- a/Functions/Feature_Engineering/FE.ipynb
+++ b/Functions/Feature_Engineering/FE.ipynb
@@ -11,12 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "5bbb570b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import pandas_ta as pta\n",
     "import numpy as np"
    ]
   },
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "05eb7df3",
    "metadata": {},
    "outputs": [],
@@ -62,7 +63,7 @@
     "        This Function of Feature_Engineering return Dataframe with Log Return\n",
     "        ------------------------------\n",
     "        Parameter(dataframe): DataFrame\n",
-    "        Parameter(name_of_column): LIST (One OR More) of dataframe column name \n",
+    "        Parameter(name_of_column): LIST of dataframe column name\n",
     "        ------------------------------\n",
     "        '''\n",
     "        \n",
@@ -81,8 +82,8 @@
     "        -Fast Moving Average (FMA): Used for short-term trends, typically with smaller periods like 9, 12, or 20.\n",
     "        -Slow Moving Average (SMA): Used for long-term trends, typically with larger periods like 50, 100, or 200.\n",
     "        ------------------------------\n",
-    "        Parameter(name_of_column): LIST (One OR More) of dataframe column name\n",
-    "        Parameter(ma_number): Number of Moving Average\n",
+    "        Parameter(name_of_column): LIST of dataframe column name\n",
+    "        Parameter(ma_number): Number of Moving Average (Slow - Fast)\n",
     "        ------------------------------\n",
     "        '''\n",
     "        \n",
@@ -97,7 +98,53 @@
     "            return new_dataframe\n",
     "        except:\n",
     "            print('No option!\\nError')\n",
-    "#------------------------------------------------------------------------------------------------------------------------------#    \n"
+    "#------------------------------------------------------------------------------------------------------------------------------#    \n",
+    "    def Rolling_Standar_Diviation(self, name_of_column, rsd_number):\n",
+    "        '''\n",
+    "        This Function of Feature_Engineering return Dataframe with Rolling Standar Diviation Return\n",
+    "        -Short-Term Trends Rolling Window Size: 10–20 periods\n",
+    "        -Long-Term Trends Rolling Window Size: 100–200 periods\n",
+    "        ------------------------------\n",
+    "        Parameter(name_of_column): LIST of dataframe column name\n",
+    "        Parameter(rsd_number): Number of Rolling Standar Diviation\n",
+    "        ------------------------------\n",
+    "        '''\n",
+    "        \n",
+    "        try:\n",
+    "            new_dataframe = self.data.copy()\n",
+    "        \n",
+    "            for _ in range(len(name_of_column)):\n",
+    "                new_dataframe[name_of_column[_]+'_RSD_'+str(rsd_number)] = new_dataframe[name_of_column[_]].rolling(rsd_number).std()\n",
+    "            return new_dataframe\n",
+    "        except:\n",
+    "            print('No option!\\nError')\n",
+    "#------------------------------------------------------------------------------------------------------------------------------#    \n",
+    "    def Relative_Strength_Index(self, name_of_column, rsi_number):\n",
+    "        '''\n",
+    "        This Function of Feature_Engineering return Dataframe with Rolling Standar Index Return\n",
+    "        -Buy: RSI < 10 & z = 1\n",
+    "        -Sell: RSI > 60 & z = 0\n",
+    "        \n",
+    "        -Overbought: RSI > 70 indicates the asset may be overbought and could be due for a pullback.\n",
+    "        -Oversold: RSI < 30 suggests the asset might be oversold and could be due for a rebound.\n",
+    "        \n",
+    "        -RSI > 50 suggests bullish momentum.\n",
+    "        -RSI < 50 suggests bearish momentum.\n",
+    "        ------------------------------\n",
+    "        Parameter(name_of_column): LIST of dataframe column name\n",
+    "        Parameter(rsi_number): Number of Rolling Standar Index\n",
+    "        ------------------------------\n",
+    "        '''\n",
+    "        \n",
+    "        try:\n",
+    "            new_dataframe = self.data.copy()\n",
+    "        \n",
+    "            for _ in range(len(name_of_column)):\n",
+    "                new_dataframe[name_of_column[_]+'_RSI_'+str(rsi_number)] = pta.rsi(new_dataframe[name_of_column[_]], length = rsi_number)\n",
+    "            return new_dataframe\n",
+    "        except:\n",
+    "            print('No option!\\nError')\n",
+    "#-------------------------------------------------------------------------------------------------------------------------------\n"
    ]
   },
   {
