--- a/Functions/Feature_Engineering/FE.ipynb
+++ b/Functions/Feature_Engineering/FE.ipynb
@@ -122,8 +122,10 @@
     "    def Relative_Strength_Index(self, name_of_column, rsi_number):\n",
     "        '''\n",
     "        This Function of Feature_Engineering return Dataframe with Rolling Standar Index Return\n",
-    "        -Buy: RSI < 10 & z = 1\n",
-    "        -Sell: RSI > 60 & z = 0\n",
+    "        - Buy: RSI < 10 & z = 1\n",
+    "        - Sell: RSI > 60 & z = 0\n",
+    "        - rsi_number Shorter Periods 7 or 9 or 14\n",
+    "        - rsi_number Longer Periods 21\n",
     "        \n",
     "        -Overbought: RSI > 70 indicates the asset may be overbought and could be due for a pullback.\n",
     "        -Oversold: RSI < 30 suggests the asset might be oversold and could be due for a rebound.\n",
