--- a/Functions/Preparation_Data/Preprocessing.ipynb
+++ b/Functions/Preparation_Data/Preprocessing.ipynb
@@ -96,6 +96,7 @@
     "        new_dataframe = dataframe.copy()\n",
     "        new_dataframe['Date'] = new_dataframe.index\n",
     "        new_dataframe['Date'] = new_dataframe['Date'].shift(-1)\n",
+    "        new_dataframe.index = new_dataframe['Date']\n",
     "        new_dataframe.drop(['Date'], axis=1, inplace=True)\n",
     "        new_dataframe.insert(0, 'Target_'+column_name, new_dataframe[column_name].shift(-1))\n",
     "        new_dataframe.dropna(axis=0, inplace=True)\n",
@@ -181,24 +182,32 @@
     "\n",
     "\n",
     "#-------------------------------------------------- PREPERATION ---------------------------------------------------------------#\n",
-    "def Drop_Missing_Data(dataframe):\n",
+    "def Drop_Missing_Data(dataframe, axis_):\n",
     "    '''\n",
     "    This Function Return a dataframe with drop null columns\n",
+    "    - axis_ = 0 Drop Rows\n",
+    "    - axis_ = 1 Drop Columns\n",
     "    ------------------------------\n",
     "    Parameter(dataframe): DataFrame\n",
+    "    Parameter(axis_): Drop columns or rows\n",
     "    ------------------------------\n",
     "    '''\n",
     "    \n",
     "    print('--- Start Drop_Missing_Data()\\n.\\n.')\n",
     "    new_dataframe = dataframe.copy()\n",
-    "\n",
-    "    for _ in new_dataframe.columns:\n",
-    "        if new_dataframe.isnull().sum()[_] > 7:\n",
-    "            #print(_, ': ', dataframe[dataframe.index < '2021-01-01'].isnull().sum()[_])\n",
-    "            new_dataframe.drop(columns=_, axis=1, inplace=True)\n",
+    "    if axis_ == 1:\n",
+    "        for _ in new_dataframe.columns:\n",
+    "            if new_dataframe.isnull().sum()[_] > 7:\n",
+    "                #print(_, ': ', dataframe[dataframe.index < '2021-01-01'].isnull().sum()[_])\n",
+    "                new_dataframe.drop(columns=_, axis=axis_, inplace=True)\n",
+    "    elif axis_ == 0:\n",
+    "        new_dataframe.dropna(axis=axis_, inplace=True)\n",
+    "    else:\n",
+    "        print('No option!\\nError')\n",
     "    \n",
     "    print('--- End  Drop_Missing_Data()\\n')\n",
     "    return new_dataframe\n",
+    "    \n",
     "#-------------------------------------------------- PREPERATION ---------------------------------------------------------------#\n",
     "\n",
     "\n",
