--- a/Functions/Visualization/Plots.ipynb
+++ b/Functions/Visualization/Plots.ipynb
@@ -134,7 +134,7 @@
     "    #plt.text(x=data.index[-1], y=data[column_name][-1], s=column_name, fontsize=12) #Possitio of text\n",
     "    \n",
     "    mplcp.add_gradient_fill(alpha_gradientglow=0.7) #Glow - Effect lines\n",
-    "    mplcp.make_lines_glow(alpha_line=0.5, n_glow_lines=10,  diff_linewidth=1.05) #Glow - Effect lines\n",
+    "    #mplcp.make_lines_glow(alpha_line=0.5, n_glow_lines=10,  diff_linewidth=1.05) #Glow - Effect lines\n",
     "    \n",
     "    plt.show() #Figure show   def Plot_Of_Line(dataframe, column_name):\n",
     "#-------------------------------------------------- PLOTS ---------------------------------------------------------------------#\n",
