--- a/Functions/Strategies/Feature_Engineering/FE.ipynb
+++ b/Functions/Strategies/Feature_Engineering/FE.ipynb
@@ -54,7 +54,6 @@
     "        Parameter(dataframe): DataFrame\n",
     "        ------------------------------\n",
     "        '''\n",
-    "        \n",
     "        self.data = dataframe\n",
     "        \n",
     "#------------------------------------------------------------------------------------------------------------------------------#        \n",
@@ -68,11 +67,9 @@
     "        '''\n",
     "        \n",
     "        try:\n",
-    "            new_dataframe = self.data.copy()\n",
-    "\n",
     "            for _ in range(len(column_name)):\n",
-    "                new_dataframe[column_name[_]+'_Lg'] = np.log(new_dataframe[column_name[_]] / new_dataframe[column_name[_]].shift(1))\n",
-    "            return new_dataframe\n",
+    "                self.data[column_name[_]+'_Lg'] = np.log(self.data[column_name[_]] / self.data[column_name[_]].shift(1))\n",
+    "            return self.data\n",
     "        except:\n",
     "            print('No option!\\nError')\n",
     "#------------------------------------------------------------------------------------------------------------------------------#    \n",
@@ -92,14 +89,12 @@
     "        '''\n",
     "        \n",
     "        try:\n",
-    "            new_dataframe = self.data.copy()\n",
-    "        \n",
     "            for _ in range(len(column_name)):\n",
     "                if (ma_number >=5 and ma_number <= 20):\n",
-    "                    new_dataframe[column_name[_]+'_FMA_'+str(ma_number)] = new_dataframe[column_name[_]].rolling(window = ma_number).mean()\n",
+    "                    self.data[column_name[_]+'_FMA_'+str(ma_number)] = self.data[column_name[_]].rolling(window = ma_number).mean()\n",
     "                elif (ma_number >=25 and ma_number <= 200):\n",
-    "                    new_dataframe[column_name[_]+'_SMA_'+str(ma_number)] = new_dataframe[column_name[_]].rolling(window = ma_number).mean()\n",
-    "            return new_dataframe\n",
+    "                    self.data[column_name[_]+'_SMA_'+str(ma_number)] = self.data[column_name[_]].rolling(window = ma_number).mean()\n",
+    "            return self.data\n",
     "        except:\n",
     "            print('No option!\\nError')\n",
     "#------------------------------------------------------------------------------------------------------------------------------#\n",
@@ -117,12 +112,12 @@
     "        '''\n",
     "        \n",
     "        try:\n",
-    "            new_dataframe = self.data.copy()\n",
-    "        \n",
     "            for _ in range(len(column_name)):\n",
-    "                new_dataframe[column_name[_]+'_EMA_'+str(ema_number)] = new_dataframe[column_name[_]].ewm(span=ema_number, adjust=False).mean()\n",
-    "                #df['EMA_30'] = df['Price'].ewm(span=30, adjust=False).mean()\n",
-    "            return new_dataframe\n",
+    "                if (ema_number >=5 and ema_number <= 20):\n",
+    "                    self.data[column_name[_]+'_FEMA_'+str(ema_number)] = self.data[column_name[_]].ewm(span=ema_number, adjust=False).mean()\n",
+    "                elif (ema_number >=25 and ema_number <= 200):\n",
+    "                    self.data[column_name[_]+'_SEMA_'+str(ema_number)] = self.data[column_name[_]].ewm(span=ema_number, adjust=False).mean()\n",
+    "            return self.data\n",
     "        except:\n",
     "            print('No option!\\nError')\n",
     "#------------------------------------------------------------------------------------------------------------------------------#    \n",
@@ -138,11 +133,9 @@
     "        '''\n",
     "        \n",
     "        try:\n",
-    "            new_dataframe = self.data.copy()\n",
-    "        \n",
     "            for _ in range(len(column_name)):\n",
-    "                new_dataframe[column_name[_]+'_RSD_'+str(rsd_number)] = new_dataframe[column_name[_]].rolling(rsd_number).std()\n",
-    "            return new_dataframe\n",
+    "                self.data[column_name[_]+'_RSD_'+str(rsd_number)] = self.data[column_name[_]].rolling(rsd_number).std()\n",
+    "            return self.data\n",
     "        except:\n",
     "            print('No option!\\nError')\n",
     "#-------------------------------------------------- Momentum-Based Strategies -------------------------------------------------#    \n",
@@ -164,27 +157,24 @@
     "        Parameter(rsi_number): Number of Rolling Standar Index\n",
     "        ------------------------------\n",
     "        '''\n",
-    "        try:\n",
-    "            if rsi_number > 0:\n",
-    "                new_dataframe = self.data.copy()\n",
-    "            \n",
-    "            if len(column_name) == 1:\n",
+    "        try:         \n",
+    "            if len(column_name) == 1 and (rsi_number > 0):\n",
     "                for _ in range(len(column_name)):\n",
-    "                    delta = new_dataframe[column_name[_]].diff()\n",
+    "                    delta = self.data[column_name[_]].diff()\n",
     "                    gain = (delta.where(delta > 0, 0)).rolling(window=rsi_number).mean()\n",
     "                    loss = (-delta.where(delta < 0, 0)).rolling(window=rsi_number).mean()\n",
     "                    rs = gain / loss\n",
-    "                    new_dataframe[column_name[_]+'_RSI_'+str(rsi_number)] = 100 - (100 / (1 + rs))\n",
-    "            elif len(column_name) > 1:\n",
+    "                    self.data[column_name[_]+'_RSI_'+str(rsi_number)] = 100 - (100 / (1 + rs))\n",
+    "            elif len(column_name) > 1 and (rsi_number > 0):\n",
     "                for _ in range(len(column_name)):\n",
-    "                    delta = new_dataframe[column_name[_]].diff()\n",
+    "                    delta = self.data[column_name[_]].diff()\n",
     "                    gain = (delta.where(delta > 0, 0)).rolling(window=rsi_number).mean()\n",
     "                    loss = (-delta.where(delta < 0, 0)).rolling(window=rsi_number).mean()\n",
     "                    rs = gain / loss\n",
-    "                    new_dataframe[column_name[_]+'_RSI_'+str(rsi_number)] = 100 - (100 / (1 + rs))\n",
+    "                    self.data[column_name[_]+'_RSI_'+str(rsi_number)] = 100 - (100 / (1 + rs))\n",
     "            else:\n",
     "                print('No option!\\nError')\n",
-    "            return new_dataframe\n",
+    "            return self.data\n",
     "        except:\n",
     "            print('No option!\\nError')\n",
     "#-------------------------------------------------------------------------------------------------------------------------------\n"
